// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button with all props 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  <h4
    className="table-title-button"
  >
    <button
      className="ant-btn"
      label="Button With Callbac"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="ordered-list"
        className="anticon anticon-ordered-list"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="ordered-list"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M920 760H336c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0-568H336c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H336c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM216 712H100c-2.2 0-4 1.8-4 4v34c0 2.2 1.8 4 4 4h72.4v20.5h-35.7c-2.2 0-4 1.8-4 4v34c0 2.2 1.8 4 4 4h35.7V838H100c-2.2 0-4 1.8-4 4v34c0 2.2 1.8 4 4 4h116c2.2 0 4-1.8 4-4V716c0-2.2-1.8-4-4-4zM100 188h38v120c0 2.2 1.8 4 4 4h40c2.2 0 4-1.8 4-4V152c0-4.4-3.6-8-8-8h-78c-2.2 0-4 1.8-4 4v36c0 2.2 1.8 4 4 4zm116 240H100c-2.2 0-4 1.8-4 4v36c0 2.2 1.8 4 4 4h68.4l-70.3 77.7a8.3 8.3 0 00-2.1 5.4V592c0 2.2 1.8 4 4 4h116c2.2 0 4-1.8 4-4v-36c0-2.2-1.8-4-4-4h-68.4l70.3-77.7a8.3 8.3 0 002.1-5.4V432c0-2.2-1.8-4-4-4z"
          />
        </svg>
      </span>
      <span>
        Button With Callbac
      </span>
    </button>
  </h4>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`Icon only button 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  <h4
    className="table-title-button"
  >
    <button
      className="ant-btn ant-btn-icon-only"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="ordered-list"
        className="anticon anticon-ordered-list"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="ordered-list"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M920 760H336c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0-568H336c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H336c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM216 712H100c-2.2 0-4 1.8-4 4v34c0 2.2 1.8 4 4 4h72.4v20.5h-35.7c-2.2 0-4 1.8-4 4v34c0 2.2 1.8 4 4 4h35.7V838H100c-2.2 0-4 1.8-4 4v34c0 2.2 1.8 4 4 4h116c2.2 0 4-1.8 4-4V716c0-2.2-1.8-4-4-4zM100 188h38v120c0 2.2 1.8 4 4 4h40c2.2 0 4-1.8 4-4V152c0-4.4-3.6-8-8-8h-78c-2.2 0-4 1.8-4 4v36c0 2.2 1.8 4 4 4zm116 240H100c-2.2 0-4 1.8-4 4v36c0 2.2 1.8 4 4 4h68.4l-70.3 77.7a8.3 8.3 0 00-2.1 5.4V592c0 2.2 1.8 4 4 4h116c2.2 0 4-1.8 4-4v-36c0-2.2-1.8-4-4-4h-68.4l70.3-77.7a8.3 8.3 0 002.1-5.4V432c0-2.2-1.8-4-4-4z"
          />
        </svg>
      </span>
    </button>
  </h4>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`invalid icon to button 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  <h4
    className="table-title-button"
  >
    <button
      className="ant-btn"
      label="Button With Callbac"
      onClick={[Function]}
      type="button"
    >
      <asd />
      <span>
        Button With Callbac
      </span>
    </button>
  </h4>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`render fails if no title prop given 1`] = `
<div>
  <h4
    className="table-title-heading"
  />
  
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`renders title prop and basic button 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  <h4
    className="table-title-button"
  >
    <button
      className="ant-btn"
      label="My Button"
      onClick={[Function]}
      type="button"
    >
      <span>
        My Button
      </span>
    </button>
  </h4>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`renders title prop and button with onClick handler 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  <h4
    className="table-title-button"
  >
    <button
      className="ant-btn"
      label="Button With Callbac"
      onClick={[Function]}
      type="button"
    >
      <span>
        Button With Callbac
      </span>
    </button>
  </h4>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`renders title prop and not the button 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;

exports[`renders without crashing 1`] = `
<div>
  <h4
    className="table-title-heading"
  >
    Title Of Table
  </h4>
  
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
</div>
`;
